RESOLVED FIXED149358
UserMediaClientMock leaks every test run
https://bugs.webkit.org/show_bug.cgi?id=149358
Summary UserMediaClientMock leaks every test run
Eric Carlson
Reported 2015-09-18 16:04:16 PDT
UserMediaClientMock leaks every test run
Attachments
Proposed patch. (1.18 KB, patch)
2015-09-18 16:07 PDT, Eric Carlson
no flags
patch (3.27 KB, patch)
2015-09-20 01:19 PDT, Tim Horton
eric.carlson: review+
Eric Carlson
Comment 1 2015-09-18 16:07:17 PDT
Created attachment 261539 [details] Proposed patch.
WebKit Commit Bot
Comment 2 2015-09-18 16:58:00 PDT
Comment on attachment 261539 [details] Proposed patch. Clearing flags on attachment: 261539 Committed r190001: <http://trac.webkit.org/changeset/190001>
WebKit Commit Bot
Comment 3 2015-09-18 16:58:04 PDT
All reviewed patches have been landed. Closing bug.
Tim Horton
Comment 4 2015-09-20 00:28:21 PDT
This is still leaking, according to the leaks bot.
Tim Horton
Comment 5 2015-09-20 01:07:25 PDT
https://bugs.webkit.org/show_bug.cgi?id=149358 made it so that we would only make a UserMediaController if we didn't already have one, so subsequent calls to provideUserMediaTo end up just leaking the client. I think instead of bailing if we already have one, we mean to be replacing it. But also it seems like the memory management surrounding Supplement/friends is quite fragile.
Tim Horton
Comment 6 2015-09-20 01:18:08 PDT
Tim Horton
Comment 7 2015-09-20 01:19:38 PDT
Tim Horton
Comment 8 2015-09-21 11:05:13 PDT
Note You need to log in before you can comment on or make changes to this bug.