UserMediaClientMock leaks every test run https://bugs.webkit.org/show_bug.cgi?id=149358

Reviewed by Tim Horton.

* platform/mock/UserMediaClientMock.h: Implement pageDestroyed.


Canonical link: https://commits.webkit.org/167445@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190001 268f45cc-cd09-0410-ab3c-d52691b4dbfc